// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled 1`] = `
.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  color: #636768;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c3 {
  font-size: 16px;
  line-height: 20px;
  background: #ffffff;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: not-allowed;
  opacity: 0.5;
  border-color: #D2D2D2;
  outline: none;
}

.c3:hover,
.c3:focus,
.c3:focus-visible {
  border-color: #9E9E9E;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

<div
  class="c0"
  direction="column"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="grey8"
      cursor="inherit"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class="c0"
    direction="column"
  >
    <textarea
      class="c3"
      disabled=""
      id="textarea_id"
      placeholder="Placeholder text!"
    />
  </div>
</div>
`;

exports[`renders 1`] = `
.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  color: #636768;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c3 {
  font-size: 16px;
  line-height: 20px;
  background: #ffffff;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: pointer;
  opacity: 1;
  border-color: #D2D2D2;
  outline: none;
}

.c3:hover,
.c3:focus,
.c3:focus-visible {
  border-color: #9E9E9E;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

<div
  class="c0 Textarea"
  direction="column"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="grey8"
      cursor="inherit"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class="c0"
    direction="column"
  >
    <textarea
      class="c3"
      id="textarea_id"
      placeholder="Placeholder text!"
    />
  </div>
</div>
`;

exports[`renders with error 1`] = `
.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  color: #636768;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c3 {
  font-size: 16px;
  line-height: 20px;
  background: #ffffff;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: pointer;
  opacity: 1;
  border-color: #B52525;
  outline: none;
}

.c3:hover,
.c3:focus,
.c3:focus-visible {
  border-color: #B52525;
}

.c4 {
  margin-top: 7px;
  font-size: 12px;
  color: #B52525;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

<div
  class="c0"
  direction="column"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="grey8"
      cursor="inherit"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class="c0"
    direction="column"
  >
    <textarea
      class="c3"
      id="textarea_id"
      placeholder="Placeholder text!"
    />
  </div>
  <span
    class="c4"
  >
    Something really quite terrible has gone wrong here!
  </span>
</div>
`;
